* Further simplified nav styles * Hid search bar from mobile nav on search pages * Removed small amount of erroneous extra space that was added to the right of page by the footer * Fixed broken layout on search page * Added a medium size to the search bar on search pages

--- a/static/scss/components/_footer.scss
+++ b/static/scss/components/_footer.scss
@@ -10,8 +10,11 @@
   @include pie-clearfix;
   padding-top: 35px;
   background-color: $he-main;
+  overflow: hidden;
 
-  @include mq($bp-medium) { padding-top: 175px; }
+  @include mq($bp-medium) {
+    padding-top: 175px;
+  }
 }
 
 
